# A_Virtual_Solar_System

./: README.md
app/: CMakeLists.txt  main.cpp
include/: InitialConditionGenerator.hpp  RandomSystemGenerator.hpp  SolarSystemGenerator.hpp  particle.hpp
src/: CMakeLists.txt  RandomSystemGenerator.cpp  SolarSystemGenerator.cpp  particle.cpp
test/: CMakeLists.txt  acceleration_test.cpp  particle_test.cpp  simulation_test.cpp
