add_executable(tests test.cpp)
add_executable(particle_test particle_test.cpp)
add_executable(acceleration_test acceleration_test.cpp)
add_executable(simulation_test simulation_test.cpp)
find_package(Catch2 3 REQUIRED)
target_include_directories(tests PUBLIC ../include)
target_include_directories(particle_test PUBLIC ../include)
target_include_directories(acceleration_test PUBLIC ../include)
target_include_directories(simulation_test PUBLIC ../include)
target_link_libraries(tests PUBLIC Catch2::Catch2WithMain nbody_lib)
target_link_libraries(particle_test PUBLIC Catch2::Catch2WithMain nbody_lib)
target_link_libraries(acceleration_test PUBLIC Catch2::Catch2WithMain nbody_lib)
target_link_libraries(simulation_test PUBLIC Catch2::Catch2WithMain nbody_lib)


include(Catch)
catch_discover_tests(tests)
catch_discover_tests(particle_test)
catch_discover_tests(acceleration_test)
catch_discover_tests(simulation_test)